deploy-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-1
  labels:
    app: test-app-1
  namespace: py-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-1
  template:
    metadata:
      labels:
        app: myapp-1
    spec:
      containers:
        - name: myapp-1
          image: kirillqq20/python-webserver:v1
          ports:
            - containerPort: 80
