service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-1
  namespace: py-app
spec:
  selector:
    app: myapp-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
