service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-2
  namespace: py-app
spec:
  selector:
    app: myapp-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
