ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: py-app
spec:
  rules:
    - host: python-app.com
      http:
        paths:
          - pathType: Exact
            path: /v1
            backend:
              service:
                name: service-app-1
                port:
                  number: 80
          - pathType: Exact
            path: /v2
            backend:
              service:
                name: service-app-2
                port:
                  number: 80
